# NWXCMake

./: README.md  pyproject.toml
.github/workflows/: merge.yaml  pull_request.yaml
cmake/: catch2_tests_from_dir.cmake  disable_in_source_builds.cmake  get_cmaize.cmake  get_dependencies.cmake  get_gauxc.cmake  install_target.cmake  nwx_find_mpi.cmake  nwx_find_package.cmake  nwx_library.cmake  nwx_mpi_test.cmake  nwx_pybind11.cmake  nwx_python_module.cmake  nwx_python_test.cmake  nwx_set_version.cmake  nwx_setup_pre_commit.cmake  set_default_nwx_options.cmake
cmake/dependencies/: boost.cmake  catch2.cmake  cereal.cmake  chemcache.cmake  chemist.cmake  eigen.cmake  gau2grid.cmake  gauxc.cmake  integrals.cmake  libfort.cmake  libint2.cmake  libxc.cmake  nux.cmake  nwchemex.cmake  parallelzone.cmake  pluginplay.cmake  simde.cmake  skbuild_python.cmake  spdlog.cmake  tensorwrapper.cmake  utilities.cmake  wtf.cmake
python/nwxcmake/: __init__.py  __main__.py
